[package]
name = "bevy_simple_terrain"
version = "0.1.0"
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = "thin"
codegen-units = 1

[profile.wasm-release]
inherits = "release"

[dependencies]
bevy = { version = "0.11.0", default-features = false, features = [
  "bevy_asset",
  "bevy_core_pipeline",
  "bevy_pbr",
  # "png",
  "bevy_render",
  "bevy_sprite",
  "bevy_ui",
  "bevy_winit",
  "tonemapping_luts",
  "ktx2",
  "zstd",
  "multi-threaded",
  "webgl2",
] }
bevy_egui = "0.21"
noise = "0.8.2"
# rand = "0.8.5"

[features]
default = ["fast-compile"]
fast-compile = ["bevy/dynamic_linking"]
